[[whats-new-part]]
= What's New?

[[spring-integration-intro-new]]
For those who are already familiar with Spring Integration, this chapter provides a brief overview of the new features of version 5.5.

If you are interested in the changes and features that were introduced in earlier versions, see the <<./history.adoc#history,Change History>>.

[[whats-new]]

== What's New in Spring Integration 5.5?

If you are interested in more details, see the Issue Tracker tickets that were resolved as part of the 5.5 development process.

[[x5.5-new-components]]
=== New Components

[[x5.5-general]]
=== General Changes